--- a/compose.yml
+++ b/compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - 8080:8080
       - 50000:50000
-    container_name: jenkins
+    container_name: newjenkins
     volumes:
       - jenkins-data:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock #mount docker socket
