--- a/compose.yml
+++ b/compose.yml
@@ -25,7 +25,7 @@ volumes:
 
 services:
   app:
-    container_name: app-1
+    container_name: appcontainer
     env_file:
       - .env
     image: node_image
